perf: Avoid unnecessary permission check
Problem: When getting watchers only to know whether a specific user is watching
the resource, checking every user, who watches the resource, has the proper
permission to read the resource is not necessary.

Solution: Add a boolean parameter to getWatcher() methods to tell whether
permission check is necessary.

This makes it two times faster, to get an issue with 19 comments, in a project
watched by 344 users.

--- a/app/views/code/diff.scala.html
+++ b/app/views/code/diff.scala.html
@@ -176,7 +176,9 @@ List[playRepository.FileDiff],path:String)
             </div>
         </div>
 
-        <button id="watch-button" type="button" class="pull-left ybtn @if(commit.getWatchers(project).contains(UserApp.currentUser())) { active ybtn-watching }" data-toggle="button">@Messages("notification.watch")</button>
+        <button id="watch-button" type="button" class="pull-left ybtn @if(commit.getWatchers
+                (project, false).contains(UserApp.currentUser())) { active ybtn-watching }"
+        data-toggle="button">@Messages("notification.watch")</button>
 
         <a href="@routes.CodeHistoryApp.history(project.owner, project.name, selectedBranch, path)" class="ybtn pull-right">@Messages("button.list")</a>
     </div>
