--- a/app/views/code/svnDiff.scala.html
+++ b/app/views/code/svnDiff.scala.html
@@ -141,7 +141,8 @@
             @** // Comment **@
         </div>
 
-        <button id="watch-button" type="button" class="ybtn @if(commit.getWatchers(project).contains(UserApp.currentUser())) { active }" data-toggle="button">@Messages("notification.watch")</button>
+        <button id="watch-button" type="button" class="ybtn @if(commit.getWatchers(project, false)
+                .contains(UserApp.currentUser())) { active }" data-toggle="button">@Messages("notification.watch")</button>
 
         <a href="@routes.CodeHistoryApp.history(project.owner, project.name, selectedBranch, path)" class="ybtn pull-right">@Messages("button.list")</a>
 
