board: Add label feature to board

--- a/app/assets/stylesheets/less/_page.less
+++ b/app/assets/stylesheets/less/_page.less
@@ -6345,3 +6345,28 @@ div.diff-body[data-outdated="true"] tr:hover .icon-comment {
 .group-board {
       width: 100% !important;
 }
+
+.board-labels {
+  width: 400px;
+  display: inline-block;
+  dt {
+    display: none;
+  }
+}
+
+.post-list{
+  .search-wrap {
+    & form {
+      width: 90%;
+      .search-bar {
+        height: 22px;
+        width: 400px;
+        display: inline-block;
+        margin-right: 10px;
+      }
+      .select2-container {
+        height: 32px;
+      }
+    }
+  }
+}
