--- a/app/views/issue/partial_select_label.scala.html
+++ b/app/views/issue/partial_select_label.scala.html
@@ -30,7 +30,7 @@
     <select name="labelIds" multiple="multiple" data-search="labelIds"
             data-toggle="select2" data-format="issuelabel" data-allow-clear="true"
             data-dropdown-css-class="issue-labels" data-container-css-class="issue-labels bordered fullsize"
-            data-placeholder="@Messages("label.select")" @additionalAttr>
+            data-placeholder="@Messages("label.select")" @additionalAttr class="hide">
       <option></option>
       @labels.groupBy(_.category).map {
         case (category, labels) => {
