--- a/app/views/board/view.scala.html
+++ b/app/views/board/view.scala.html
@@ -5,6 +5,7 @@
 * http://yobi.io
 *
 * @author Ahn Hyeok Jun
+* @author Suwon Chae
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
@@ -65,9 +66,18 @@
               <strong class="name">@Messages("common.noAuthor")</strong>
             }
           </a>
+          <div class="board-labels pull-right">
+            @if(!IssueLabel.findByProject(project).isEmpty){
+                @if(isAllowed(UserApp.currentUser(), post.asResource(), Operation.UPDATE)){
+                    @issue.partial_select_label(IssueLabel.findByProject(project), post.getLabelIds)
+                } else {
+                    @issue.partial_show_selected_label(post.labels.toList, "")
+                }
+            }
+            </div>
         </div>
-    		<div class="content markdown-wrap">@Html(Markdown.render(post.body, post.asResource().getProject()))</div>
-            <div class="attachments" id="attachments" data-attachments="@toJson(AttachmentApp.getFileList(ResourceType.BOARD_POST.toString(), post.id.toString()))"></div>
+        <div class="content markdown-wrap">@Html(Markdown.render(post.body, post.asResource().getProject()))</div>
+        <div class="attachments" id="attachments" data-attachments="@toJson(AttachmentApp.getFileList(ResourceType.BOARD_POST.toString(), post.id.toString()))"></div>
     	</div>
     	<div class="board-footer board-actrow">
     	    <div class="pull-left">
@@ -122,6 +132,7 @@
 @common.markdown(project)
 @common.commentDeleteModal()
 
+<link rel="stylesheet" type="text/css" media="screen" href="@routes.IssueLabelApp.labelStyles(project.owner, project.name)">
 <link rel="stylesheet" type="text/css" media="screen" href="@routes.Assets.at("javascripts/lib/atjs/jquery.atwho.css")">
 <script type="text/javascript" src="@routes.Assets.at("javascripts/lib/atjs/jquery.caret.min.js")"></script>
 <script type="text/javascript" src="@routes.Assets.at("javascripts/lib/atjs/jquery.atwho.js")"></script>
@@ -148,6 +159,19 @@
             "target": "textarea[id^=editor-]",
             "url"   : "@Html(routes.ProjectApp.mentionList(project.owner, project.name, post.getNumber, post.asResource().getType.resource()).toString())"
         });
+
+        $('.board-labels select').on('change', function(e){
+            var url = "@Html(routes.BoardApi.updatePostLabel(project.owner, project.name, post.getNumber).toString())";
+            $.ajax({
+                url: url,
+                method: "POST",
+                data: JSON.stringify(e.val),
+                contentType: "application/json; charset=UTF-8"
+            }).done(function(response) {
+            }).error(function(response){
+            });
+        });
 	});
 </script>
+@common.select2()
 }
