yonafy: Apply modifications for fork project
- Remove yobi logo
- Change update url
- Add check update option
- Change project/group default bg image
- Change navigation menu style

--- a/app/assets/stylesheets/less/_override.less
+++ b/app/assets/stylesheets/less/_override.less
@@ -352,3 +352,16 @@ li.select2-result-with-children:first-of-type {
   filter: alpha(opacity=100);
 }
 
+.welcome-table {
+    td {
+        border-top: none;
+        font-size: 14px;
+        vertical-align: middle;
+    }
+    a {
+        width: 85%;
+    }
+    border-bottom: 1px solid #eee;
+    margin-bottom: -1px;
+}
+
