--- a/app/views/help/toc.scala.html
+++ b/app/views/help/toc.scala.html
@@ -38,7 +38,7 @@
                 <div class="answer-wrap">
                     <i class="yobicon-a a"></i>
                     <div class="answer" style="width:100%">
-                        @Messages("app.name")를 설치하고자 하면 <a href="http://github.com/nforge/yobi#korean">http://github.com/nforge/yobi#korean</a>를 참고해 주세요.
+                        @Messages("app.name")를 설치하고자 하면 <a href="https://github.com/doortts/yona#korean">https://github.com/doortts/yona#korean</a>를 참고해 주세요.
                     </div>
                 </div>
             </li>
