--- a/app/assets/stylesheets/less/_page.less
+++ b/app/assets/stylesheets/less/_page.less
@@ -32,7 +32,7 @@
 
 .gnb-outer {
     height:40px;
-    background-color:#1d2d46;
+    background-color: #1b1b1b;
 
     &.project-header {
         background-color: rgba(0, 0, 0, 0.35);
@@ -59,9 +59,19 @@
 }
 
 .gnb-inner {
+    .logo-title {
+        background: #FF5722;
+        padding: 6px 10px !important;
+        color: #803131 !important;
+        border-radius: 2px;
+        font-weight: bold;
+        opacity: 0.7;
+        &:hover {
+            color:#FFF !important;
+            opacity: 1;
+        }
+    }
     .logo {
-        float:left;
-        background-image: url("@{base-image-path}/yobi-logo.png");
         background-position: 11px 10px;
         background-repeat: no-repeat;
         width:44px;
@@ -72,8 +82,6 @@
             float: left;
             width: 1px;
             height: 40px;
-            background: #373D47;
-            border-left: 1px solid #03183A;
         }
 
         &:after {
@@ -81,8 +89,6 @@
             float: left;
             width: 1px;
             height: 40px;
-            background: #373D47;
-            border-left: 1px solid #03183A;
             margin-left:40px;
         }
     }
@@ -175,17 +181,16 @@
 
             &.gnb-usermenu-item {
                 font-size: 14px;
-                color:#788ba7;
+                color: @low-white;
 
                 a {
                     line-height: 30px;
                     padding:5px 10px;
-                    color:#788ba7;
                     text-decoration: none;
                     .transition(color 0.15s);
 
                     &:hover {
-                        color:#FFF;
+                        color: @blue;
                     }
 
                     &.usermenu-icon-button {
@@ -196,7 +201,7 @@
 
             &.gnb-usermenu-dropdown {
                 font-size: 14px;
-                color:#788ba7;
+                color: @low-white;
 
                 > a {
                     padding:0 10px;
@@ -220,18 +225,18 @@
                         .transition(all 0.15s ease);
                         height: 0;
                         vertical-align: top;
-                        border-top: 4px solid #788ba7;
+                        border-top: 4px solid @low-white;
                         border-right: 4px solid transparent;
                         border-left: 4px solid transparent;
                         content: "";
                     }
 
                     &:hover, &:focus {
-                        color:#FFF;
+                        color: @blue;
                         text-decoration: none;
 
                         .caret {
-                            border-top: 4px solid #FFF;
+                            border-top: 4px solid @blue;
                         }
                     }
 
@@ -898,8 +903,6 @@
     h3 {
         margin:0;
         padding:0;
-        font-size: 30px;
-        color:@yobi-primary;
 
         span {
             font-size:14px;
@@ -981,7 +984,6 @@
 
     button {
         border:1px solid rgba(0,0,0, .1);
-        border-top:none;
         .border-radius(0 0 6px 6px);
         color:@yobi-gray;
         padding:0px 25px;
@@ -990,6 +992,7 @@
         i {
             font-size:12px;
         }
+        border-top: 2px solid white;
     }
 }
 
