--- a/app/views/common/navbar.scala.html
+++ b/app/views/common/navbar.scala.html
@@ -50,8 +50,10 @@
 </div>
 <header class="gnb-outer @if(project !=null) {project-header}">
     <div class="gnb-inner">
-        <a href="@routes.Application.index()" class="logo"><h1 class="blind">@utils.Config.getSiteName</h1></a>
         <ul class="gnb-nav">
+            <li>
+                <a href="@routes.Application.index()" class="logo logo-title">Y</a>
+            </li>
             <li class="@isActiveMenu(MenuType.PROJECTS)">
                 <a href="@routes.ProjectApp.projects()">@Messages("title.projectList")</a>
             </li>
