watch: Change project watch options
- Turn on watch at project creation and added by member
- Show project watch status at group page

--- a/app/assets/stylesheets/less/_page.less
+++ b/app/assets/stylesheets/less/_page.less
@@ -6373,3 +6373,20 @@ div.diff-body[data-outdated="true"] tr:hover .icon-comment {
     }
   }
 }
+
+.stats-wrap {
+    i {
+        font-size: 16px;
+        margin-left: 5px;
+        margin-right: 5px;
+    }
+    .yobicon-lightbulb {
+        &.ramp-on {
+            color: #B6DA54;
+        }
+        &.ramp-off {
+            color: #DADADA;
+        }
+    }
+}
+
