group: Change group default logo

--- a/app/views/common/navbar.scala.html
+++ b/app/views/common/navbar.scala.html
@@ -48,7 +48,7 @@
         </p>
     </div>
 </div>
-<header class="gnb-outer @if(project !=null) {project-header}">
+<header class="gnb-outer @if(project != null || org != null) {project-header}">
     <div class="gnb-inner">
         <ul class="gnb-nav">
             <li>
