yonafy: Reshape subtle UIs

--- a/app/assets/stylesheets/less/_page.less
+++ b/app/assets/stylesheets/less/_page.less
@@ -716,9 +716,15 @@
 .siteintro {
     border-bottom:1px solid #e8e8e8;
 
+    background-image:linear-gradient(rgba(0, 0, 0, 0.7), rgba(0,0,0, 0.3)), url('../images/bg-samples/desk-pen-photo.jpg');
+    background-size:     cover;
+    background-repeat:   no-repeat;
+    background-position: center center;
+
     .siteintro-cover {
+        opacity: 1;
         padding:55px 0 65px;
-        background-image:url('@{base-image-path}/img_front.jpg');
+
         background-position: bottom;
         background-size: 100% 170px;
         background-repeat : no-repeat;
@@ -736,7 +742,8 @@
             padding:0;
             font-size:34px;
             font-weight:normal;
-            color: #333;
+            color: #FAFAFA;
+            font-family: Apple SD Gothic Neo, D2Coding, sans-serif;
         }
 
         .site-features {
@@ -748,7 +755,7 @@
             margin-top:5px;
 
             li {
-                color:#808080;
+                color:#9E9E9E;
                 display:inline-block;
                 font-size:16px;
                 margin-left:5px;
@@ -781,7 +788,7 @@
         padding:0;
         font-size: 20px;
         font-weight:normal;
-        margin-top:-20px;
+        margin-top: 30px;
         display:block;
         padding:10px 20px;
         line-height:20px;
