--- a/app/views/index/partial_intro.scala.html
+++ b/app/views/index/partial_intro.scala.html
@@ -18,15 +18,13 @@
 * See the License for the specific language governing permissions and
 * limitations under the License.
 **@
+<div class="siteintro-bg">
 <div class="siteintro">
     <div class="siteintro-cover">
         <div class="siteintro-wrap">
-            <h1 class="site-heading">Software Development Platform</h1>
+            <h1 class="site-heading">21 Century Software Development Platform</h1>
             <ul class="site-features">
-                <li>Public or Private Projects.</li>
-                <li>Code Repository.</li>
-                <li>Code Review.</li>
-                <li>Issue Tracker.</li>
+                <li>Just focus on what you have to do</li>
             </ul>
         </div>
         <div class="signup-btn">
@@ -83,17 +81,4 @@
         </li>
     </ul>
 </div>
-<div class="sample">
-    <div class="sample-wrap">
-        <div class="sample-img">
-            <img src="/assets/images/sample-image.jpg" >
-        </div>
-        <div class="get-started">
-            <h2>@Html(Messages("title.gettingStarted",utils.Config.getSiteName))</h2>
-
-            <a href="@routes.ProjectApp.newProjectForm()" class="ybtn ybtn-success ybtn-padding">
-                <i class="yobicon-database-add"></i> @Messages("button.newProject")
-            </a>
-        </div>
-    </div>
 </div>
