site-setting: Add restriction message at sign-up page
If site setting 'signup.require.confirm = true' is used,
show restricted condition message and site admin email for contact

And also, admin email is obfuscated

--- a/app/assets/stylesheets/less/_page.less
+++ b/app/assets/stylesheets/less/_page.less
@@ -1448,7 +1448,7 @@
 //---- sign up
 .signup-form-wrap {
     width: 400px;
-    margin-top: 54px;
+    margin-top: 14px;
     .center-block;
 
     .text {
@@ -6397,3 +6397,7 @@ div.diff-body[data-outdated="true"] tr:hover .icon-comment {
     }
 }
 
+.obfuscate {
+    unicode-bidi: bidi-override;
+    direction: rtl;
+}
