--- a/app/assets/stylesheets/less/_markdown.less
+++ b/app/assets/stylesheets/less/_markdown.less
@@ -4,6 +4,14 @@
   clear: both;
   overflow:auto;
 
+  ul, ol {
+    font-weight: normal;
+  }
+
+  ul > li > p {
+    margin-bottom: 0;
+  }
+
   a {
       color:#4183c4;
       text-decoration:none;
@@ -22,12 +30,15 @@
   h1 {
     margin:1em 0 15px;
     font-size:2.5em;
+    border-left: 5px solid #FFCB6B;
+    padding-left: 12px;
+    margin-left: -12px;
   }
 
   h2 {
     margin:1em 0 15px;
-    border-bottom:1px solid #bbb;
-    font-size:2.0em;
+    border-bottom:1px solid #ddd;
+    font-size:1.6em;
   }
 
   h3 {
