--- a/app/assets/stylesheets/less/_markdown.less
+++ b/app/assets/stylesheets/less/_markdown.less
@@ -6,6 +6,7 @@
 
   ul, ol {
     font-weight: normal;
+    margin-left: 5px;
   }
 
   ul > li > p {
@@ -27,26 +28,51 @@
       text-decoration:none;
   }
 
+  .anchor(){
+    .head-anchor {
+      float: left;
+      position: absolute;
+      opacity: 0;
+      margin-left: -18px;
+      color: #555;
+    }
+    &:hover {
+      border-left: 5px solid #fff;
+      .head-anchor {
+        opacity: 1;
+      }
+    }
+  }
+
   h1 {
-    margin:1em 0 15px;
     font-size:2.5em;
+    padding-left: 8px;
+    margin: 1em -14px 15px;
     border-left: 5px solid #FFCB6B;
-    padding-left: 12px;
-    margin-left: -12px;
+    .anchor();
+    width: 95%;
   }
 
   h2 {
     margin:1em 0 15px;
     border-bottom:1px solid #ddd;
     font-size:1.6em;
+    border-left: 5px solid #fff;
+    width: 95%;
+    .anchor();
   }
 
   h3 {
+    margin:1em 0 5px;
     font-size:1.5em;
+    border-left: 5px solid #fff;
+    .anchor();
   }
 
   h4 {
     font-size:1em;
+    border-left: 5px solid #fff;
+    .anchor();
   }
 
   hr {
