--- a/app/assets/stylesheets/less/_markdown.less
+++ b/app/assets/stylesheets/less/_markdown.less
@@ -44,6 +44,21 @@
     }
   }
 
+  .anchor-noborder(){
+    .head-anchor {
+      float: left;
+      position: absolute;
+      opacity: 0;
+      margin-left: -18px;
+      color: #555;
+    }
+    &:hover {
+      .head-anchor {
+        opacity: 1;
+      }
+    }
+  }
+
   h1 {
     font-size:2.5em;
     padding-left: 8px;
@@ -57,22 +72,23 @@
     margin:1em 0 15px;
     border-bottom:1px solid #ddd;
     font-size:1.6em;
-    border-left: 5px solid #fff;
     width: 95%;
-    .anchor();
+    .anchor-noborder();
   }
 
   h3 {
     margin:1em 0 5px;
     font-size:1.5em;
-    border-left: 5px solid #fff;
-    .anchor();
+    .anchor-noborder();
   }
 
   h4 {
     font-size:1em;
-    border-left: 5px solid #fff;
-    .anchor();
+    .anchor-noborder();
+  }
+
+  h5 {
+    .anchor-noborder();
   }
 
   hr {
