--- a/app/assets/stylesheets/less/_page.less
+++ b/app/assets/stylesheets/less/_page.less
@@ -563,6 +563,9 @@
         padding:10px 0;
         line-height: 30px;
     }
+    .nav-tabs > li {
+          margin-bottom: -2px;
+    }
 }
 
 .site-breadcrumb-outer {
