footer: Add yona authors link

--- a/app/assets/stylesheets/less/_page.less
+++ b/app/assets/stylesheets/less/_page.less
@@ -593,7 +593,6 @@
         margin: 0 auto;
         text-align:center;
         line-height: 34px;
-        border-top:1px solid #e8e8e8;
         width:1170px;
     }
 
@@ -610,6 +609,15 @@
 
             &:hover {
                 color: #2cb400;
+            }
+        }
+
+        .yona-author {
+            padding: 2px;
+            &:hover {
+                color: white;
+                background-color: orangered;
+                text-decoration: none;
             }
         }
 
