--- a/app/assets/stylesheets/less/_markdown.less
+++ b/app/assets/stylesheets/less/_markdown.less
@@ -54,24 +54,28 @@
   h2 {
     margin:1em 0 15px;
     border-bottom:1px solid #ddd;
-    font-size:1.6em;
+    font-size:1.7em;
     width: 95%;
     .anchor();
   }
 
   h3 {
     margin:1em 0 5px;
-    font-size:1.5em;
+    font-size:1.4em;
+    padding: 0;
     .anchor();
   }
 
   h4 {
     font-size: 1.25em;
+    margin-top: 1.2em;
+    padding: 0;
     .anchor();
   }
 
   h5 {
-    font-size: 15px;
+    font-size: 1em;
+    margin-top: 20px;
     .anchor();
   }
 
