comment: Highlight comment which mentioned me

--- a/app/assets/stylesheets/less/_page.less
+++ b/app/assets/stylesheets/less/_page.less
@@ -2905,18 +2905,20 @@ label.inline-list {
                 margin-top: 10px;
             }
 
-            &.author {
+            &.mentioned {
                 .media-body {
                     &:before {
-                        background-color: #DEEEB3;
+                        background-color: #A7E1FB;
                     }
-                    border: 1px solid #8BC34A;
+                    border: 1px solid #56C5F7;
                 }
 
                 .meta-info {
-                    background-color: #DEEEB3;
+                    background-color: #A7E1FB;
                 }
+            }
 
+            &.author {
                 .attach {
                     border-top: none;
                     border-left: none;
