--- a/app/views/issue/view.scala.html
+++ b/app/views/issue/view.scala.html
@@ -368,6 +368,9 @@
             "target": 'textarea[id^=editor-]',
             "url"   : "@Html(routes.ProjectApp.mentionList(project.owner, project.name, issue.getNumber, issue.asResource().getType.resource()).toString())"
         });
+
+        // detect comment which contains mention at me
+        $(".comment-body:contains('@UserApp.currentUser().loginId')").closest(".comment").addClass("mentioned");
     });
 </script>
 }
